--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-.carousel-inner > .item {
-    height: 400px;
- }
+body {
+    background-image: url('images/bg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: 100% 100%;
+
+}
